--- a/css_4/css/style.css
+++ b/css_4/css/style.css
@@ -16,6 +16,7 @@ img{vertical-align: top;}
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
 /*--------------------*/
 
+
 .border{
 	position: relative;
 	width: 300px;
@@ -23,35 +24,39 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
 	top: 10px;
 	left: 10px;
     left: 100px;
-	background-color: turquoise;
-	border: 1px solid black;
+	background-color: white;
 }
 .one{
-	width: 70px;
+	width: 230px;
 	position: relative;
-	height: 50px;
+	height: 300px;
 	bottom: 270px;
-	left: 110px;
-	background-color: red;
+	padding: 10px;
+	left: 130px;
+	bottom: 290px;
+	background-color:white;
 	margin-bottom: 20px;
 	
 }
 .two{
-	width: 70px;
-	height: 200px;
+	width: 295px;
+	height: 295px;
 	position: relative;
-	left: 110px;
-	bottom: 280px;
-	background-color: blue;
+	padding: 20px;
+	left: 100px;
+	bottom: 610px;
+	background-color: rgba(45, 42, 42, 0.66);
 
 }
 .thre{
 	width: 200px;
-	height: 50px;
+	height: 200px;
 	position: relative;
+	padding: 15px;
+	margin: -50px;
 	left: 190px;
-	bottom: 330px;
-	background-color: yellow;
+	bottom: 820px;
+	background-color: white;
 	
 }
 .for{
@@ -62,4 +67,18 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
 	bottom: 590px;
 	background-color: green;
 }
-
+.bold{
+	padding: 2px;
+	font-weight: bold;
+}
+.lorem{
+	padding: 5px;
+}
+.on{
+	padding: 5px;
+background-color: greenyellow;
+}
+.tw{
+padding: 5px;
+background-color: orange;
+}
